name:               gathering
version:            0.1.0.0
homepage:           https://github.com/githubuser/gathering#readme
license:            BSD3
license-file:       LICENSE
author:             Author name here
maintainer:         example@example.com
copyright:          2022 Author name here
category:           Web
build-type:         Simple
cabal-version:      >=1.10
extra-source-files:
  CHANGELOG.md
  README.md

executable gathering
  hs-source-dirs:   app
  main-is:          Main.hs
  default-language: Haskell2010
  build-depends:
      base       >=4.7 && <5
    , gathering

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

library
  hs-source-dirs:   src
  exposed-modules:
    Api.Application
    Api.Controller
    Api.Handlers.Users
    Api.Types.Users
    Database.Connection
    Service.Authorisation

  build-depends:
      aeson
    , base
    , bcrypt
    , bytestring
    , dotenv
    , http-client
    , postgresql-simple
    , random
    , resource-pool
    , servant
    , servant-client
    , servant-server
    , text
    , time
    , uuid
    , wai
    , warp

  default-language: Haskell2010
